fix: spacing bug and minor copy amends

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,12 +258,12 @@ h3 ~ p {
 /* about.html -------*/
 
 .about-image {
-    max-height: 350px;
+    max-height: 370px;
     text-align: center;
     margin-bottom: 30px;
-    width: 80%;
-    position: relative;
-    left: 10%;
+    width: 100%;
+    /* position: relative;
+    left: 10%; */
 }
 
 /* animations -------- */
